--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,12 +1,31 @@
-disabled_rules:
-  - file_length
-  - force_cast
-  - identifier_name
-  - line_length
-  - nesting
-  - trailing_comma
-  - trailing_whitespace
-
 included:
   - Sources
   - Tests
+
+# general
+# sort in alphabetical order
+disabled_rules:
+  - force_cast
+  - nesting
+  - trailing_comma
+
+opt_in_rules:
+  - sorted_imports
+
+# configurable rules
+# sort in alphabetical order
+file_length:
+  warning: 850
+  error: 1500
+
+identifier_name:
+  min_length: 1
+  max_length: 40
+  allowed_symbols: ["_"]
+
+line_length: 250
+
+type_name:
+  min_length: 2
+  max_length: 40
+  allowed_symbols: ["_"]
